Updated file and function names

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server --cors --proxy http://localhost:8080"
+    "start": "http-server --cors"
   },
   "keywords": [],
   "author": "",
